--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -13,7 +13,7 @@
       <label class="circle w3-hover-opacity"><input type="radio" name="choice" value={{ choice }} onchange="update_choice(this)"/>{{ choice }}</label>
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
+  <p><button name="jeu2" type="submit" class="w3-button w3-text-white w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
   </form>
 </div>
 
