--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -7,7 +7,7 @@
     Combien shouaitez vous investir ?
 </header>
 <p><input class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name="montant" type="number" style="width:120px; display:inline-block;"></p>
-<button type="submit" name="boutton" value="Jeu3-choix" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button>
+<button name="jeu3" type="submit" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button>
 <p>
 </form>
 
