--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -21,7 +21,7 @@
     </label>
   {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
+  <p><button name="jeu4" type="submit" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
 </form>
 </div>
 
