--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -8,8 +8,8 @@
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="boutton" value=0 class="w3-margin-right w3-button w3-red" style="width:120px;">Refuser</button>
-    <button type="submit" name="boutton" value=1 class="w3-margin-left w3-button" style="width:120px; background-color:{{ config["theme_colors"][0] }}">Accpeter</button>
+    <button name="jeu5" type="submit" value="refuser" class="w3-margin-right w3-button w3-red" style="width:120px;">Refuser</button>
+    <button name="jeu5" type="submit" value="accepter" class="w3-margin-left w3-button" style="width:120px; background-color:{{ config["theme_colors"][0] }}">Accpeter</button>
   </p>
   <p>
 </form>
