--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -28,7 +28,7 @@
   </div>
 </div>
 <p>
-<button type="submit" name="boutton" value="proposition" class="w3-button w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une proposition</button>
+<button type="submit" name="jeu5" value="proposition" class="w3-button w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une proposition</button>
 <p>
 </form>
 
