--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -36,7 +36,7 @@
   </div>
   <div class="w3-container w3-center">
       <form method="POST">
-        <button type="submit" class="w3-button w3-xlarge w3-margin w3-padding w3-text-white" name="boutton" value="nouvelle proposition" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
+        <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-xlarge w3-margin w3-padding w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
