--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -15,8 +15,8 @@
   </select>
   <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
   <p>
-    <button type="submit" name="boutton" value="en fait non" class="w3-button w3-margin-right w3-red">en fait non</button>
-    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
+    <button type="submit" name="retour" class="w3-button w3-margin-right w3-red">en fait non</button>
+    <button type="submit" name="faire_un_don" value="envoi" class="w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
   </p>
   </form>
   </div>
