--- a/website/templates/results.jinja
+++ b/website/templates/results.jinja
@@ -6,7 +6,7 @@
   {{ player.message }}
   {% if player.last_profit != None %}
     <form method="POST">
-      <p><button type="submit" class="w3-btn w3-green" name="boutton" value="partager">Partager</button></p>
+      <p><button name="partager" type="submit" class="w3-btn w3-green" value="redirect">Partager</button></p>
     </form>
   {% endif %}
 </div>
