--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -1,8 +1,8 @@
 {% extends "base+etoiles.jinja" %}{% block inside2%}
 
 <div class="w3-center" style="margin-left:115px">
-<form method="POST" action="faire_un_don">
-<button type="submit" class="w3-btn w3-round-large w3-margin w3-red w3-border" name="faire_un_don" value="redirect" style="font-size:22px">Faire un don</button>
+<form method="GET" action="faire_un_don">
+<button type="submit" class="w3-btn w3-round-large w3-margin w3-red w3-border" style="font-size:22px">Faire un don</button>
 </form>
 </div>
 
