--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -15,8 +15,8 @@
   </select>
   <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
   <p>
-    <button type="submit" name="don_etoiles" value="envoi" class="w3-margin-right w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
-    <button type="submit" name="retour" class="w3-margin-left w3-button w3-red" formaction="/">Retour</button>
+    <button type="submit" class="w3-margin-right w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
+    <button type="submit" class="w3-margin-left w3-button w3-red" formaction="/">Retour</button>
   </p>
   <p>
 </form>
