--- a/website/templates/donner_des_etoiles.jinja
+++ b/website/templates/donner_des_etoiles.jinja
@@ -8,8 +8,8 @@
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="don_etoiles" value="oui" class="w3-margin-right w3-button" style="width:120px; background-color:{{ config["theme_colors"][0] }}">OUI</button>
-    <button type="submit" name="don_etoiles" value="non" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
+    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-margin-right w3-button" style="width:120px; background-color:{{ config["theme_colors"][0] }}">OUI</button>
+    <button type="submit" name="don_etoiles" value="terminer" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
   </p>
   <p>
 </form>
