--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -1,4 +1,5 @@
-{% extends "base+etoiles.jinja" %}{% block inside2%}
+{% extends "base+etoiles.jinja" %}
+{% block inside2 %}
 
 <div class="w3-center" style="margin-left:115px">
 <form method="GET" action="faire_un_don">
