--- a/website/templates/base+etoiles.jinja
+++ b/website/templates/base+etoiles.jinja
@@ -1,4 +1,5 @@
-{% extends "base.jinja" %}{% block inside%}
+{% extends "base.jinja" %}
+{% block inside %}
 
 <div class="w3-display-topleft" style="width:115px">
   {% for player_it in engine.players %}
