--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -10,8 +10,8 @@
 <form method="POST">
 <select class="w3-select w3-border w3-margin w3-large" style="width:180px;" id="tickets" name="tickets">
 <option value="" disabled="" selected="">Nombre de tickets</option>
-<option value="0">Aucun ticket</option>
-<option value="1">1 ticket</option>
+<option value=0>Aucun ticket</option>
+<option value=1>1 ticket</option>
 {% for i in range(2, 21)%}
 <option value={{i}}>{{i}} tickets</option>
 {% endfor %}
