--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -17,7 +17,7 @@
     {% endif %}
   </div>
 </div>
-<iframe src="{{ url_for("static", filename="animations/Jeu1.sozi.html") }}" style="width: 100%;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{ game.frame_id }} % player.presentation.frames.length);">
+<iframe src="{{ url_for("static", filename="animations/Jeu%d.sozi.html" % game.game_nb) }}" style="width: 100%;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{ game.frame_id }} % player.presentation.frames.length);">
   My Sozi presentation should play here.
 </iframe>
 
