--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -1,5 +1,5 @@
 {% extends "base+etoiles.jinja" %}
-{% block inside2 %}
+{% block content_with_donations %}
 
 <div class="w3-center" style="margin-left:115px">
 <form method="GET" action="faire_un_don">
@@ -7,5 +7,8 @@
 </form>
 </div>
 
+<div style="width: 100%; display:flex; flex-direction:column; justify-content:space-evenly; align-items:center; flex-grow: 1">
 {% block content %} {% endblock %}
+</div>
+
 {% endblock %}
