--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -1,8 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% set reveal_state = game.current_reveal_state %}
-{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
-%}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content %}
+
 <div class="w3-center animate__animated animate__fadeIn" style="width:320px;">
   <div class="w3-margin-bottom" style="display:flex; justify-content:space-between;">
 
