--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -4,7 +4,7 @@
 {% block title %}Donner des étoiles{% endblock %}
 {% block content %}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
   <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
       <h4>À qui shouaitez-vous léguer des étoiles ?</h4>
   </header>
