--- a/website/templates/donner_des_etoiles.jinja
+++ b/website/templates/donner_des_etoiles.jinja
@@ -2,7 +2,7 @@
 {% set config = game.config %}
 {% extends "base+don.jinja" %} {% block title %}Donner des étoiles ?{% endblock %} {% block content%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
   <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
       <h4>Shouaitez-vous léguer des étoiles ?</h4>
   </header>
