--- a/website/templates/final-results.jinja
+++ b/website/templates/final-results.jinja
@@ -1,8 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base.jinja" %} {% block title %}Flouze FIN{% endblock %} {% block inside%}
+{% extends "base.jinja" %} {% block title %}Flouze FIN{% endblock %} {% block content_without_stars %}
 
-<div class="w3-panel w3-center w3-display-middle w3-padding w3-large w3-round-large animate__animated animate__fadeIn" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
+<div class="w3-panel w3-center w3-padding w3-large w3-round-large animate__animated animate__fadeIn" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
 <p>{{ player.message }}</p>
 </div>
 
