--- a/website/templates/partager.jinja
+++ b/website/templates/partager.jinja
@@ -1,8 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+etoiles.jinja" %} {% block title %}Partager{% endblock %} {% block inside2%}
+{% extends "base+don.jinja" %} {% block title %}Partager{% endblock %} {% block content %}
 
-  <div class="w3-large w3-card-4 w3-display-middle w3-white w3-center animate__animated animate__fadeIn" style="width:260px;">
+  <div class="w3-large w3-card-4 w3-white w3-center animate__animated animate__fadeIn" style="width:260px;">
   <header id="total" class="w3-container w3-text-white w3-xlarge w3-padding" style="background-color:{{ engine.current_game.config["theme_colors"][0] }}">
       <img src="{{ url_for("static", filename="images/coin.png") }}" style="width:22px" alt="Coin"> &nbsp; à partager
   </header>
