--- a/website/templates/quiz.jinja
+++ b/website/templates/quiz.jinja
@@ -1,6 +1,6 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base.jinja" %} {% block title %}QUIZ{% endblock %} {% block inside%}
+{% extends "base.jinja" %} {% block title %}QUIZ{% endblock %} {% block content_without_stars %}
 
 <div class="w3-card-4 w3-center w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
 {% if input %}
