--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -1,6 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
+{% if game.game_nb != 5 %} {% extends "base+don.jinja" %} {% block content %} 
+{% else %} {% extends "base+etoiles.jinja" %} {% block content_without_stars %} 
+{% endif %}
 
 <div class="w3-card-4 w3-center animate__animated animate__zoomIn" style="background-color:{{ config["theme_colors"][1] }}">
   <div class="w3-container w3-text-white" style="background-color:{{ config["theme_colors"][0] }}; margin:10px">
@@ -21,5 +23,6 @@
   My Sozi presentation should play here.
 </iframe>
 
-
 {% endblock %}
+
+{% block title %}Flouze - Jeu {{game.game_nb}}{% endblock %}
