--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -4,12 +4,12 @@
 {% set proposition = engine.current_game.current_proposition %}
 {% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content_without_stars %}
 
-<div class="w3-center w3-white animate__animated animate__fadeIn" style="width:500px;">
+<div class="w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
   <header class="w3-text-white w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
       {{ player.message }}
   </header>
-  <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
-    {% for other_player in other_players[:2] %}
+  <div style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:10px">
+    {% for other_player in other_players %}
     <div class="w3-card w3-xlarge w3-margin w3-padding w3-half" style="width:150px; height:150px; background-color:{{ other_player.color }};">
       <b>{{ other_player.name }}</b>
       <div class="w3-padding-small w3-text-white " style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0] }}</div>
@@ -21,20 +21,7 @@
     </div>
     {% endfor %}
   </div>
-  <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
-    {% for other_player in other_players[2:4] %}
-    <div class="w3-card w3-xlarge w3-margin w3-padding w3-half" style="width:150px; height:150px; background-color:{{ other_player.color }};">
-      <b>{{ other_player.name }}</b>
-      <div class="w3-padding-small w3-text-white" style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0 + 2] }}</div>
-      {% if other_player.choice == 0 %}
-      <div class="w3-padding-small w3-white w3-text-red">Refusé</div>
-      {% else %}
-      <div class="w3-padding-small w3-white w3-text-green">Accepté</div>
-      {% endif %}
-    </div>
-    {% endfor %}
-  </div>
-  <div class="w3-container w3-center">
+  <div class="w3-center">
       <form method="POST">
         <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-xlarge w3-margin w3-padding w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
       </form>
