--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -1,6 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content%}
+{% extends "base+don.jinja" %}
+{% block title %}Flouze - Jeu 2{% endblock %}
+{% block content %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
 <header class="w3-text-white medium w3-padding" style="background-color:{{ config["theme_colors"][0] }}">
