--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -1,6 +1,7 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content_without_stars %}
+{% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %}
+{% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
   <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
