--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -2,7 +2,9 @@
 {% set config = game.config %}
 {% set other_players = engine.current_game.other_players %}
 {% set proposition = engine.current_game.current_proposition %}
-{% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content_without_stars %}
+{% extends "base.jinja" %}
+{% block title %}Flouze - Jeu 5{% endblock %}
+{% block content %}
 
 <div class="w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
   <header class="w3-text-white w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
