--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -24,9 +24,9 @@
   <div class="w3-text-white w3-text-white large w3-round-large" style="text-align:right; padding:2px 16px; position:absolute; top:40px; right:0; background-color:{{ config["theme_colors"][0] }}">({{ player.saved_flouze }} <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin-medium" alt="Coin">)</div>
   <div style="height:28px">*</div>
   {% endif %}
-  {% block content_with_stars %} {% endblock %}
+  {% block etoiles_header %} {% endblock %}
 <div style="width: 100%; display:flex; flex-direction:column; justify-content:space-evenly; align-items:center; flex-grow: 1">
-{% block content_without_stars %} {% endblock %}
+{% block content %} {% endblock %}
 </div>
   <div id="messages" class="toast">
   {% for category, message in get_flashed_messages(with_categories=true) %}
