--- a/website/templates/donner_des_etoiles.jinja
+++ b/website/templates/donner_des_etoiles.jinja
@@ -1,6 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+don.jinja" %} {% block title %}Donner des étoiles ?{% endblock %} {% block content%}
+{% extends "base+don.jinja" %}
+{% block title %}Donner des étoiles ?{% endblock %}
+{% block content%}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
   <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
