--- a/website/templates/en_attente.jinja
+++ b/website/templates/en_attente.jinja
@@ -1,5 +1,7 @@
 {% set game = engine.current_game %}
-{% extends "base+don.jinja" %} {% block title %}Flouze{% endblock %} {% block content%}
+{% extends "base+don.jinja" %}
+{% block title %}Flouze{% endblock %}
+{% block content %}
 
 <div class="w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
   <h5>En attente des autres joueurs</h5>
