--- a/website/templates/en_attente_jeu5.jinja
+++ b/website/templates/en_attente_jeu5.jinja
@@ -1,5 +1,7 @@
 {% set game = engine.current_game %}
-{% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block content_without_stars %}
+{% extends "base.jinja" %}
+{% block title %}Flouze - Jeu 5{% endblock %}
+{% block content %}
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
   <h5>En attente des autres joueurs</h5>
