--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -1,6 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+etoiles.jinja" %} {% block title %}Faire un don{% endblock %} {% block content_without_stars %}
+{% extends "base+etoiles.jinja" %}
+{% block title %}Faire un don{% endblock %}
+{% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
   <header class="w3-container w3-padding" style="background-color:{{ config["theme_colors"][0] }}; font-size:22px">
