--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -13,7 +13,7 @@
       background-size: cover;
     }
     </style>
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>Home</title>
   </head>
 
 <body>
@@ -28,7 +28,6 @@
  {% endfor %} {% endif %} {% endwith %}
 </div>
 
-{% block inside %} {% endblock %}
 
 <div class="w3-card-4 w3-display-middle w3-white" style="width:300px;">
     <div class="w3-container w3-green w3-center w3-xlarge w3-padding">
