--- a/website/templates/results.jinja
+++ b/website/templates/results.jinja
@@ -1,9 +1,7 @@
 {% set game = engine.current_game %}
-{% if game.game_nb != 5 %} {% extends "base+don.jinja" %}  
-{% else %} {% extends "base+etoiles.jinja" %} {% set content = content_without_stars %}
-{% endif %}
-
-{% block content %} 
+{% if game.game_nb != 5 %} {% extends "base+don.jinja" %} {% else %} {% extends "base+etoiles.jinja" %} {% endif %}
+{% block title %}Résultats{% endblock %}
+{% block content %}
 
 <div class="w3-panel w3-large w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding w3-margin animate__animated animate__fadeIn">
   {{ player.message }}
@@ -15,5 +13,3 @@
 </div>
 
 {% endblock %}
-
-{% block title %}Résultats{% endblock %}
