fix bugs et formattage pour moblie terminé

--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -5,9 +5,9 @@
 {% block title %}Flouze - Jeu 2{% endblock %}
 {% block content %}
 
-<div class="w3-center contrainte_reveal animate__animated animate__fadeIn" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:10px">
+<div class="w3-center contrainte_reveal animate__animated animate__fadeIn" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:20px">
   {% for player_it in engine.players %}
-  <div class="flip-card" style="width:150px; height:120px;">
+  <div class="flip-card card-size">
     <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
       <div class="flip-card-front" style="background-color:{{ player_it.color }};">
         <h4><b>{{ player_it.name }}</b></h4>
