--- a/website/templates/monitoring.jinja
+++ b/website/templates/monitoring.jinja
@@ -40,8 +40,14 @@
         {{ player.message }}
       </div>
       {% if stage[1] in [1, 2, 3] %}
-      choix : {{ player.choice }}<br>
-      done : {{ player.is_done }}<br>
+        <div class="w3-white w3-center" style="margin: auto; border-radius:50%; width:44px; height:45px; font-size:34px!important;">
+        {% if player.is_done %}
+          <i class="fa fa-check-circle w3-text-green"></i>
+        {% else %}
+          <i class="fa fa-times-circle w3-text-red"></i>
+        {% endif %}
+        </div>
+        choix : {{ player.choice }}
       {% endif %}
       {% if stage[0] in [2, 4] and "reveal" in page["url"] %}
         {% set reveal_state = game.current_reveal_state %}
@@ -55,14 +61,14 @@
 
 
   <div class="w3-row w3-margin">
-    <div class="w3-right w3-large w3-light-gray w3-padding" style="max-width:50%">
+    <div class="w3-left w3-large w3-light-gray w3-padding" style="width:40%">
       {% for i in range(20) %}
       {{ engine.logs[-i-1] }}<br>
       {% endfor %}
     </div>
     <div class="w3-rest">
       <form class="w3-center w3-xlarge" method="POST">
-        <p>Page actuelle : {{ engine.current_page['url'] }}</p>
+        <p>Page actuelle : {{ page['url'] }}</p>
         {% if engine.current_stage[1] == 0 %}
           <p>Explications</p>
           <p><button name="diapo" type="submit" class="w3-button w3-green w3-margin-right" value="precedant">Diapo précedante</button>
@@ -71,12 +77,12 @@
         <p>Jeu {{ engine.current_stage[0] }}, manche {{ engine.current_stage[1] }}</p>
         <p><button name="page" type="submit" class="w3-button w3-red w3-margin" value="precedant">Page précedante</button>
           <button name="page" type="submit" class="w3-button w3-teal w3-margin" value="suivant">Page suivante</button></p>
-        {% if engine.current_stage == (5, 1) and page["phase"] == proposition and game.current_anwser %}
+        {% if engine.current_stage == (5, 1) and engine.current_page["phase"] == "proposition" and game.current_answer %}
           {{game.current_question[1][0]}}<br>
-          {{game.current_guesser["name"]}} : {{game.current_anwser}}<br>
+          {{game.current_guesser["name"]}} : {{game.current_answer}}<br>
           ({{game.current_question[1][1]}})
-          <p><button name="quiz" type="submit" class="w3-button w3-red w3-margin" value="rejeter">Rejeter</button>
-          <button name="quiz" type="submit" class="w3-button w3-teal w3-margin" value="valider">Valider</button></p>
+          <p><button name="quiz" type="submit" class="w3-button w3-red w3-margin-right" value="rejeter">Rejeter</button>
+          <button name="quiz" type="submit" class="w3-button w3-teal w3-margin-left" value="valider">Valider</button></p>
         {% endif %}
       </form>
     </div>
