--- a/website/templates/results.jinja
+++ b/website/templates/results.jinja
@@ -5,7 +5,7 @@
 
 <div class="w3-panel w3-large w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding w3-margin animate__animated animate__fadeIn">
   {{ player.message }}
-  {% if player.last_profit != None %}
+  {% if player.last_profit != 0 %}
     <form action="partager_profit" method="GET">
       <p><button name="partager" type="submit" class="w3-btn w3-green">Partager</button></p>
     </form>
