--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -247,13 +247,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .circle {display:inline-block;border-radius: 50%;width: 55px;height: 55px;font-size:28px!important; margin:5px; border:5px solid #009688;background-color: #bff5ea;}
 .circle.checked {background-color:lightgray;}
 .circle input{display:none}
-@media (max-width:400px){.circle {border-radius: 50%;width: 50px;height: 50px;font-size:24px!important; margin:2px; border:4px solid #009688;}}
-.circle-big {border-radius: 50%;width: 55px;height: 55px;font-size:36px!important;}
+@media (max-width:400px){.circle {border-radius: 50%;width: 50px;height: 50px;font-size:26px!important; margin:2px; border:4px solid #009688;}}
+.circle-big {border-radius:50%; width:55px; height:55px; font-size:36px!important;}
 
 @media (max-width:500px){.contrainte {width: 280px}}
 
-@media (max-width:500px){.contrainte_reveal {width: 320px}}
 @media (max-width:1000px){.contrainte_reveal {width: 500px}}
+@media (max-width:500px){.contrainte_reveal {width: 320px}}
 
 .prize-radio {display:inline-block;}
 .prize-radio.checked {background-color:lightgray;}
@@ -266,6 +266,12 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flip-card {
   perspective: 1000px;
 }
+
+.card-size {width:150px; height:120px;}
+@media (max-width:350px){.card-size {width:140px; height:110px;}}
+
+.padding-reveal {padding:8px}
+@media (max-width:350px){.padding-reveal {padding:4px}}
 
 .flip-card-inner {
   position: relative;
