--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -6,20 +6,20 @@
 {% block title %}Flouze - Jeu 4{% endblock %}
 {% block content %}
 
-<div class="w3-center contrainte_reveal animate__animated animate__fadeIn" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:10px">
+<div class="w3-center contrainte_reveal animate__animated animate__fadeIn" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:20px">
   {% for player_it in engine.players %}
-    <div class="flip-card" style="width:150px; height:120px;">
+    <div class="flip-card card-size">
       <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
         <div class="flip-card-front" style="background-color:{{ player_it.color }};">
           <h4><b>{{ player_it.name}}</b></h4>
         </div>
         <div class="flip-card-back" style="background-color:{{ player_it.color }};">
           <h4><b>{{ player_it.name }}</b></h4>
-	{% if prizes[player_it.choice] == "star" %}
-	<div class="w3-xlarge w3-padding w3-margin {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %}" style="background-color:{{ player_it.sec_color }}"><i class="fa fa-star"></i></div>
-	{% else %}
-	<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ player_it.sec_color }}">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin"></div>
-	{% endif %}
+        {% if prizes[player_it.choice] == "star" %}
+        <div class="w3-xlarge w3-margin padding-reveal {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %}" style="background-color:{{ player_it.sec_color }}; position:relative; bottom:4px"><i class="fa fa-star"></i></div>
+        {% else %}
+        <div class="w3-xlarge w3-margin w3-text-white padding-reveal" style="background-color:{{ player_it.sec_color }}; position:relative; bottom:4px">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin"></div>
+        {% endif %}
         </div>
       </div>
     </div>
