--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -5,32 +5,20 @@
 {% block title %}Flouze - Jeu 5{% endblock %}
 {% block content %}
 
-<form method="POST" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="width:400px;">
-<header class="w3-container w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">
-    <h4>Veuillez faire une offre aux autres joueurs</h4>
+<form method="POST" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
+<header class="w3-container w3-text-white medium w3-padding" style="background-color:{{ config["theme_colors"][0] }}">
+    Veuillez faire une offre aux autres joueurs
 </header>
-<div class="w3-margin-right w3-margin-left" style="display:flex;">
-  <div class="w3-card w3-margin w3-padding w3-half" style="background-color:{{ other_players[0].color }}">
-    <p><b>{{ other_players[0].name }}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{ other_players[0].name }} type="number" style="width:100px; display:inline-block;"></p>
+<div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
+  {% for players in other_players %}
+  <div class="w3-card w3-padding" style="background-color:{{ players.color }}; width:140px">
+    <h4><b>{{ players.name }}</b></h4>
+    <input class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name={{ players.name }} type="number" style="width:110px;">
   </div>
-  <div class="w3-card w3-margin w3-padding w3-half" style="background-color:{{ other_players[1].color }}">
-    <p><b>{{ other_players[1].name }}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{ other_players[1].name }} type="number" style="width:100px; display:inline-block;"></p>
-  </div>
-</div>
-<div class="w3-margin-right w3-margin-left" style="display:flex;">
-  <div class="w3-card w3-margin w3-padding w3-half" style="background-color:{{ other_players[2].color }}">
-    <p><b>{{other_players[2].name }}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{ other_players[2].name }} type="number" style="width:100px; display:inline-block;"></p>
-  </div>
-  <div class="w3-card w3-margin w3-padding w3-half" style="background-color:{{ other_players[3].color }}">
-    <p><b>{{other_players[3].name }}</b></p>
-    <p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name={{ other_players[3].name }} type="number" style="width:100px; display:inline-block;"></p>
-  </div>
+  {% endfor %}
 </div>
 <p>
-<button type="submit" name="jeu5" value="proposition" class="w3-button w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Faire une proposition</button>
+<button type="submit" name="jeu5" value="proposition" class="w3-button w3-text-white w3-large" style="background-color:{{ config["theme_colors"][0] }}">Faire une proposition</button>
 <p>
 </form>
 
