--- a/website/templates/final-results.jinja
+++ b/website/templates/final-results.jinja
@@ -4,7 +4,7 @@
 {% block title %}Flouze FIN{% endblock %}
 {% block content %}
 
-<div class="w3-panel w3-center w3-padding w3-large w3-round-large animate__animated animate__fadeIn" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
+<div class="w3-panel w3-center w3-padding w3-large w3-round-large animate__animated animate__fadeIn" style="max-width:90%; border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
 <p>{{ player.message }}</p>
 </div>
 
