--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -3,8 +3,18 @@
 
 <div class="w3-center" style="margin-left:115px">
 <form method="GET" action="faire_un_don">
-<button type="submit" class="w3-btn w3-round-large w3-margin w3-red w3-border" style="font-size:22px">Faire un don</button>
+<button type="submit" class="w3-btn w3-round-large w3-margin w3-red w3-border medium">Faire un don</button>
+<button onclick="document.getElementById('history').style.display='block'" class="w3-button w3-circle medium w3-text-white" style="background-color:{{ config["theme_colors"][0] }}"><i class="fa fa-history"></i></button>
 </form>
+</div>
+
+<div id="history" class="w3-modal">
+  <div class="w3-modal-content w3-padding scroll">
+    <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+    {% for message in engine.players.messages %}
+    {{message[0].strftime('%H:%M : ') + message[2]}}
+    {% endfor %}
+  </div>
 </div>
 
 {% endblock %}
