--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -11,8 +11,8 @@
 <div id="history" class="w3-modal">
   <div class="w3-modal-content w3-padding scroll">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-    {% for message in engine.players.messages %}
-    {{message[0].strftime('%H:%M : ') + message[2]}}
+    {% for time, _, msg in players.messages %}
+    {{time.strftime('%H:%M : ') + msg}}
     {% endfor %}
   </div>
 </div>
